--- a/test/tests.css
+++ b/test/tests.css
@@ -4,21 +4,19 @@ body {
 }
 
 h2 {
-	font-size: 123.07%;
+	font-size: 100%;
+	padding: 0;
+	margin: 0.1em 0 0.1em 0;
 }
 
 div.xn_test_suite_container {
 	border: solid #cccccc 1px;
-	padding: 5px;
+	padding: 2px 5px;
+	margin: 2px 0px;
 }
 
 div.xn_test_progressbar_container {
 	border: solid black 1px;
-}
-
-div.xn_test_progressbar_container div {
-	width: 0%;
-	height: 2em;
 }
 
 div.xn_test_progressbar_container *.success {
@@ -29,10 +27,62 @@ div.xn_test_progressbar_container *.failure {
 	background-color: red;
 }
 
+div.xn_test_overallprogressbar_container {
+	position: relative;
+}
+
+div.xn_test_overallprogressbar_container h1 {
+	margin: 0;
+	padding: 2px;
+	font-size: 125%;
+	font-weight: bold;
+	white-space: nowrap;
+}
+
 dl *.success {
 	color: green;
 }
 
 dl *.failure {
 	color: red;
+}
+
+span.xn_test_expander {
+	padding: 0;
+	border: solid black 1px;
+	cursor: pointer;
+	cursor: hand;
+	line-height: 100%; 
+	font-weight: bold;
+	margin-right: 1em;
+	font-size: 11px;
+}
+
+dl.xn_test_expanded {
+	display: block;
+}
+
+dl.xn_test_collapsed {
+	display: none;
+}
+
+div.xn_test_suite_success {
+	border: solid 2px limegreen;
+}
+
+div.xn_test_suite_failure {
+	border: solid 2px red;
+}
+
+pre.xn_test_log_report {
+	background-color: #f5f5f5;
+	padding: 3px;
+	border: solid gray 1px;
+	font-size: 11px;
+	font-family: Courier New, Courier, monospace;
+}
+
+code.xn_test_stacktrace {
+	color: red;
+	overflow: scroll;
 }
